[tool.poetry]
name = "cms_spider"
version = "0.1.0"
description = ""
authors = ["v_dongawang <v_dongawang@tencent.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
pymysql = "^0.10.1"
dbutils = "^2.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
